POWR-1483 add a manage menu link to the parent block

--- a/web/sites/default/config/views.view.page_menu.yml
+++ b/web/sites/default/config/views.view.page_menu.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_menu_link_text
+    - user.role.administrator
+    - user.role.group_creator
+    - user.role.sitewide_editor
   module:
     - draggableviews
     - group
@@ -662,6 +665,238 @@ display:
       tags:
         - 'config:field.storage.node.field_menu_link_text'
         - extensions
+  attachment_1:
+    display_plugin: attachment
+    id: attachment_1
+    display_title: 'Attachment: Manage menu button'
+    position: 4
+    display_options:
+      display_extenders: {  }
+      displays:
+        block_parent_to_pages_menu: block_parent_to_pages_menu
+      attachment_position: after
+      access:
+        type: role
+        options:
+          role:
+            group_creator: group_creator
+            sitewide_editor: sitewide_editor
+            administrator: administrator
+      defaults:
+        access: false
+        relationships: false
+        fields: false
+      relationships:
+        field_menu_parent:
+          id: field_menu_parent
+          table: node__field_menu_parent
+          field: field_menu_parent
+          relationship: none
+          group_type: group
+          admin_label: 'Parent for items in this menu'
+          required: false
+          plugin_id: standard
+        reverse__node__field_menu_parent:
+          id: reverse__node__field_menu_parent
+          table: node_field_data
+          field: reverse__node__field_menu_parent
+          relationship: field_menu_parent
+          group_type: group
+          admin_label: 'Pages under the parent'
+          required: false
+          entity_type: node
+          plugin_id: entity_reverse
+        group_content:
+          id: group_content
+          table: node_field_data
+          field: group_content
+          relationship: none
+          group_type: group
+          admin_label: 'Content group content'
+          required: false
+          group_content_plugins:
+            'group_node:page': 'group_node:page'
+            'group_node:alert': '0'
+            'group_node:building': '0'
+            'group_node:calendar_item': '0'
+            'group_node:city_charter': '0'
+            'group_node:city_code': '0'
+            'group_node:city_service': '0'
+            'group_node:council_document': '0'
+            'group_node:council_meeting': '0'
+            'group_node:development_permit': '0'
+            'group_node:event': '0'
+            'group_node:external_resource': '0'
+            'group_node:location': '0'
+            'group_node:news': '0'
+            'group_node:notification': '0'
+            'group_node:park_facility': '0'
+            'group_node:policy': '0'
+            'group_node:service_location': '0'
+            'group_node:top_search': '0'
+          entity_type: node
+          plugin_id: group_content_to_entity_reverse
+        gid:
+          id: gid
+          table: group_content_field_data
+          field: gid
+          relationship: group_content
+          group_type: group
+          admin_label: Group
+          required: false
+          entity_type: group_content
+          entity_field: gid
+          plugin_id: standard
+      fields:
+        nid:
+          id: nid
+          table: node_field_data
+          field: nid
+          relationship: reverse__node__field_menu_parent
+          group_type: count_distinct
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: number_integer
+          settings:
+            thousand_separator: ''
+            prefix_suffix: true
+          group_column: entity_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          set_precision: false
+          precision: 0
+          decimal: .
+          format_plural: 0
+          format_plural_string: !!binary MQNAY291bnQ=
+          prefix: ''
+          suffix: ''
+          entity_type: node
+          entity_field: nid
+          plugin_id: field
+        id:
+          id: id
+          table: groups_field_data
+          field: id
+          relationship: gid
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: true
+            text: '<a href="/group/{{ id__value }}/node/{{ raw_arguments.nid }}/menu" class="btn-cta-outline">Manage menu</a>'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: number_integer
+          settings:
+            thousand_separator: ''
+            prefix_suffix: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: group
+          entity_field: id
+          plugin_id: field
+      display_description: ''
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - 'user.node_grants:view'
+        - user.roles
+      tags: {  }
   block_parent_to_pages_menu:
     display_plugin: block
     id: block_parent_to_pages_menu
@@ -1584,9 +1819,9 @@ display:
       tags:
         - 'config:field.storage.node.field_menu_link_text'
         - extensions
-  page_1:
+  manage_menu:
     display_plugin: page
-    id: page_1
+    id: manage_menu
     display_title: 'Page: Manage Menu'
     position: 3
     display_options:
@@ -2347,6 +2582,15 @@ display:
             value: "<h2>Manage menu for {{ title_1 }}</h2>\r\n<p>Drag the menu items to reorder them, then click \"save order\". You must add content to this page as a parent menu item before it will appear in this list.</p>"
             format: full_html
           plugin_id: text
+      menu:
+        type: none
+        title: Menu
+        description: ''
+        expanded: false
+        parent: ''
+        weight: 0
+        context: '0'
+        menu_name: admin
     cache_metadata:
       max-age: 0
       contexts:
