POWR-1517 color update

--- a/web/sites/default/config/environment_indicator.switcher.dev.yml
+++ b/web/sites/default/config/environment_indicator.switcher.dev.yml
@@ -7,4 +7,4 @@ description: null
 name: Dev
 url: 'https://dev-portlandor.pantheonsite.io'
 fg_color: '#ffffff'
-bg_color: '#046a38'
+bg_color: '#3455eb'
