POWR-1413 Add group contents for Park facility, Park image, Park document.

--- a/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
@@ -49,7 +49,7 @@ content:
     region: content
   field_body_content:
     weight: 13
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
@@ -64,7 +64,7 @@ content:
     region: content
   field_documents:
     weight: 16
-    label: above
+    label: hidden
     settings:
       view_mode: teaser
       link: false
@@ -81,7 +81,7 @@ content:
     region: content
   field_facebook:
     weight: 17
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: twitter_embed
@@ -103,7 +103,7 @@ content:
   field_images:
     type: media_thumbnail
     weight: 15
-    label: above
+    label: hidden
     settings:
       image_style: ''
       image_link: ''
@@ -118,7 +118,7 @@ content:
     region: content
   field_located_within:
     weight: 7
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
@@ -148,7 +148,7 @@ content:
     type: entity_reference_label
     region: content
   field_park_address_or_entrance:
-    weight: 6
+    weight: 5
     label: hidden
     settings:
       view_mode: teaser
@@ -166,15 +166,23 @@ content:
     region: content
   field_park_amenities_activities:
     weight: 11
-    label: hidden
+    label: above
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_park_location_type:
     weight: 2
-    label: hidden
+    label: above
     settings:
       link: true
     third_party_settings: {  }
@@ -182,15 +190,23 @@ content:
     region: content
   field_reservations_available:
     weight: 12
-    label: hidden
+    label: above
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_size_in_acres:
     weight: 9
-    label: hidden
+    label: above
     settings:
       thousand_separator: ''
       decimal_separator: .
@@ -201,14 +217,14 @@ content:
     region: content
   field_twitter:
     weight: 18
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: twitter_embed
     region: content
   field_year_acquired:
     weight: 10
-    label: hidden
+    label: above
     settings:
       thousand_separator: ''
       prefix_suffix: true
@@ -216,7 +232,7 @@ content:
     type: number_integer
     region: content
   locations_entity_view_1:
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
