--- a/web/sites/default/config/group.role.program-admin.yml
+++ b/web/sites/default/config/group.role.program-admin.yml
@@ -20,15 +20,12 @@ permissions:
   - 'create group_media:image entity'
   - 'create group_media:map entity'
   - 'create group_media:video entity'
-  - 'create group_node:city_charter entity'
-  - 'create group_node:city_code entity'
   - 'create group_node:city_service entity'
   - 'create group_node:development_permit entity'
   - 'create group_node:event entity'
   - 'create group_node:news entity'
   - 'create group_node:notification entity'
   - 'create group_node:page entity'
-  - 'create group_node:policy entity'
   - 'delete any group_media:audio content'
   - 'delete any group_media:audio entity'
   - 'delete any group_media:document content'
@@ -84,6 +81,7 @@ permissions:
   - 'delete own group_node:page content'
   - 'delete own group_node:page entity'
   - 'delete own group_node:policy content'
+  - 'delete own group_node:policy entity'
   - 'edit group'
   - 'leave group'
   - 'update any group_media:audio content'
