--- a/web/sites/default/config/views.view.page_menu.yml
+++ b/web/sites/default/config/views.view.page_menu.yml
@@ -686,6 +686,10 @@ display:
         access: false
         relationships: false
         fields: false
+        sorts: false
+        filters: false
+        filter_groups: false
+        title: false
       relationships:
         field_menu_parent:
           id: field_menu_parent
@@ -752,7 +756,7 @@ display:
           id: nid
           table: node_field_data
           field: nid
-          relationship: reverse__node__field_menu_parent
+          relationship: none
           group_type: count_distinct
           admin_label: ''
           label: ''
@@ -888,6 +892,18 @@ display:
           entity_field: id
           plugin_id: field
       display_description: ''
+      sorts: {  }
+      pager:
+        type: some
+        options:
+          items_per_page: 1
+          offset: 0
+      filters: {  }
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      title: 'Manage menu button'
     cache_metadata:
       max-age: -1
       contexts:
