POWR-1413 Fix park group content migration

--- a/web/modules/custom/portland_migrations/migrations/park_group_content.yml
+++ b/web/modules/custom/portland_migrations/migrations/park_group_content.yml
@@ -10,7 +10,7 @@ source:
 process:
   type:
     plugin: default_value
-    default_value: 'group_node:park_facility' # content_plugin: 'group_node:park_facility'
+    default_value: group_content_type_173ec46569294 # content_plugin: 'group_node:park_facility'
   langcode:
     plugin: default_value
     source: language
