POWR-1413 Migrate city section for parks

--- a/web/modules/custom/portland_migrations/migrations/parks.yml
+++ b/web/modules/custom/portland_migrations/migrations/parks.yml
@@ -22,9 +22,9 @@ process:
     plugin: default_value
     default_value: 1
   title: Property
-  # field_city_section: 
-  #   plugin: migrate_park_subarea
-  #   source: SubArea
+  field_city_section: 
+    plugin: migrate_park_city_section
+    source: SubArea
   field_facebook: Facebook
   field_history/value: HistoricalInfo
   field_history/format:
