--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -3,12 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_browser_embed
+    - entity_browser.browser.locations_browser
     - field.field.node.page.field_audience
     - field.field.node.page.field_body_content
     - field.field.node.page.field_featured_media
     - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
+    - field.field.node.page.field_location
     - field.field.node.page.field_page_type
     - field.field.node.page.field_popular
     - field.field.node.page.field_related_content
@@ -33,7 +34,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 14
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -67,12 +68,27 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 10
+    weight: 11
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_location:
+    weight: 9
+    settings:
+      entity_browser: locations_browser
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: teaser
+      open: false
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
     region: content
   field_page_type:
     weight: 2
@@ -88,7 +104,7 @@ content:
     type: boolean_checkbox
     region: content
   field_related_content:
-    weight: 9
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -97,7 +113,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 16
+    weight: 17
     settings:
       match_operator: CONTAINS
       size: 60
@@ -106,7 +122,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 15
+    weight: 16
     settings:
       size: 60
       placeholder: ''
@@ -143,13 +159,13 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 17
+    weight: 18
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -166,7 +182,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 13
+    weight: 14
     region: content
     settings:
       match_operator: CONTAINS
@@ -174,7 +190,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
