--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.page.field_featured_media
     - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
+    - field.field.node.page.field_location
     - field.field.node.page.field_page_type
     - field.field.node.page.field_popular
     - field.field.node.page.field_related_content
@@ -82,6 +83,14 @@ content:
             fi: false
             fi-def-at: false
     type: entity_reference_entity_view
+    region: content
+  field_location:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_summary:
     type: string
