Adding location field to the group types

--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_browser_embed
+    - entity_browser.browser.locations_browser
     - field.field.group.program.field_address
     - field.field.group.program.field_audience
     - field.field.group.program.field_building
@@ -19,6 +19,7 @@ dependencies:
     - field.field.group.program.field_featured_groups
     - field.field.group.program.field_featured_media
     - field.field.group.program.field_legacy_path
+    - field.field.group.program.field_location
     - field.field.group.program.field_logo
     - field.field.group.program.field_menu_link
     - field.field.group.program.field_parent_group
@@ -43,6 +44,7 @@ third_party_settings:
     group_contact_information:
       children:
         - field_address
+        - field_location
         - field_phone
         - field_email
         - field_building
@@ -50,7 +52,6 @@ third_party_settings:
       weight: 5
       format_type: fieldset
       format_settings:
-        label: 'Contact Information'
         description: 'City offices may provide mailing address, contact phone, and contact email information to the public by filling out these fields.'
         id: contact-information
         classes: ''
@@ -94,7 +95,7 @@ content:
     type: chosen_select
     region: content
   field_building:
-    weight: 9
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -103,7 +104,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_email:
-    weight: 8
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -160,7 +161,7 @@ content:
     type: boolean_checkbox
     region: content
   field_featured_content:
-    weight: 10
+    weight: 11
     settings:
       match_operator: CONTAINS
       size: 60
@@ -169,7 +170,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 11
+    weight: 12
     settings:
       match_operator: CONTAINS
       size: 60
@@ -193,12 +194,27 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 14
+    weight: 15
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_location:
+    weight: 7
+    settings:
+      entity_browser: locations_browser
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: teaser
+      open: false
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
     region: content
   field_logo:
     type: image_image
@@ -209,7 +225,7 @@ content:
     region: content
     third_party_settings: {  }
   field_menu_link:
-    weight: 13
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
@@ -221,7 +237,7 @@ content:
     type: chosen_select
     region: content
   field_phone:
-    weight: 7
+    weight: 8
     settings:
       placeholder: ''
       country: US
@@ -229,7 +245,7 @@ content:
     type: telephone_cleave
     region: content
   field_search_keywords:
-    weight: 12
+    weight: 13
     settings:
       size: 60
       placeholder: ''
