--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -19,6 +19,7 @@ dependencies:
     - field.field.group.project.field_featured_groups
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
+    - field.field.group.project.field_location
     - field.field.group.project.field_map
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_phone
@@ -48,7 +49,7 @@ third_party_settings:
         - field_enable_documents_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 16
+      weight: 17
       format_type: fieldset
       format_settings:
         id: ''
@@ -63,7 +64,7 @@ bundle: project
 mode: default
 content:
   field_address:
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: address_default
@@ -76,21 +77,21 @@ content:
     region: content
   field_display_date:
     type: string_textfield
-    weight: 15
+    weight: 16
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   field_display_date_toggle:
-    weight: 14
+    weight: 15
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_email:
-    weight: 11
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -133,7 +134,7 @@ content:
     type: boolean_checkbox
     region: content
   field_end_date:
-    weight: 13
+    weight: 14
     settings:
       title: ''
       format: mm/dd/yyyy
@@ -191,7 +192,7 @@ content:
     type: bootstrap_date_widget
     region: content
   field_featured_content:
-    weight: 17
+    weight: 18
     settings:
       match_operator: CONTAINS
       size: 60
@@ -200,7 +201,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 18
+    weight: 19
     settings:
       match_operator: CONTAINS
       size: 60
@@ -224,16 +225,31 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 20
+    weight: 21
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_location:
+    weight: 9
+    settings:
+      entity_browser: locations_browser
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: teaser
+      open: false
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
+    region: content
   field_map:
     type: entity_browser_entity_reference
-    weight: 19
+    weight: 20
     settings:
       entity_browser: map_browser_embed
       field_widget_display: rendered_entity
@@ -253,7 +269,7 @@ content:
     type: chosen_select
     region: content
   field_phone:
-    weight: 10
+    weight: 11
     settings:
       placeholder: ''
     third_party_settings: {  }
@@ -272,7 +288,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_search_keywords:
-    weight: 21
+    weight: 22
     settings:
       size: 60
       placeholder: ''
@@ -288,7 +304,7 @@ content:
     type: string_textfield
     region: content
   field_start_date:
-    weight: 12
+    weight: 13
     settings:
       title: ''
       format: mm/dd/yyyy
