--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -17,6 +17,7 @@ dependencies:
     - field.field.group.elected_official.field_featured_groups
     - field.field.group.elected_official.field_instagram
     - field.field.group.elected_official.field_legacy_path
+    - field.field.group.elected_official.field_location
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
@@ -140,6 +141,14 @@ content:
     third_party_settings: {  }
     type: string
     region: center_center
+  field_location:
+    weight: 11
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_phone:
     type: telephone_link
     weight: 4
