--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - field.field.group.project.field_featured_groups
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
+    - field.field.group.project.field_location
     - field.field.group.project.field_map
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_phone
@@ -192,6 +193,14 @@ content:
             fi: false
             fi-def-at: false
     type: entity_reference_entity_view
+    region: content
+  field_location:
+    weight: 7
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_map:
     type: entity_reference_entity_view
