--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.locations_browser
     - field.field.group.elected_official.field_address
     - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
@@ -17,6 +18,7 @@ dependencies:
     - field.field.group.elected_official.field_featured_groups
     - field.field.group.elected_official.field_instagram
     - field.field.group.elected_official.field_legacy_path
+    - field.field.group.elected_official.field_location
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
@@ -30,6 +32,7 @@ dependencies:
   module:
     - address
     - cleave
+    - entity_browser
     - field_group
     - focal_point
     - lightning_media
@@ -44,6 +47,7 @@ third_party_settings:
         - field_twitter
         - field_instagram
         - field_address
+        - field_location
       parent_name: ''
       weight: 5
       format_type: tabs
@@ -160,6 +164,21 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_location:
+    weight: 13
+    settings:
+      entity_browser: locations_browser
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: teaser
+      open: false
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
+    region: content
   field_official_title:
     type: string_textfield
     weight: 1
