--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -19,6 +19,7 @@ dependencies:
     - field.field.group.bureau_office.field_featured_groups
     - field.field.group.bureau_office.field_featured_media
     - field.field.group.bureau_office.field_legacy_path
+    - field.field.group.bureau_office.field_location
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_menu_link
     - field.field.group.bureau_office.field_official_organization_name
@@ -121,6 +122,14 @@ content:
             fis-def-at: false
             fi: false
             fi-def-at: false
+    region: content
+  field_location:
+    weight: 6
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_summary:
     type: string
