--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - field.field.group.program.field_featured_groups
     - field.field.group.program.field_featured_media
     - field.field.group.program.field_legacy_path
+    - field.field.group.program.field_location
     - field.field.group.program.field_logo
     - field.field.group.program.field_menu_link
     - field.field.group.program.field_parent_group
@@ -119,6 +120,14 @@ content:
             fi: false
             fi-def-at: false
     type: entity_reference_entity_view
+    region: content
+  field_location:
+    weight: 5
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_summary:
     weight: 1
