POWR-1483 update to field help text

--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -115,32 +115,14 @@ content:
     type: string_textfield
     region: content
   field_menu_parent:
+    type: entity_reference_autocomplete
     weight: 16
+    region: content
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
-    third_party_settings:
-      conditional_fields:
-        8b28705c-6e9c-41f9-b265-78f43531728f:
-          dependee: field_include_in_menu
-          settings:
-            state: visible
-            condition: checked
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              value: false
-            effect: show
-            effect_options: {  }
-            selector: ''
-            form_mode: default
-          entity_type: node
-          bundle: page
-    type: entity_reference_autocomplete
-    region: content
+    third_party_settings: {  }
   field_page_type:
     weight: 2
     settings: {  }
