--- a/web/sites/default/config/field.field.node.page.field_menu_parent.yml
+++ b/web/sites/default/config/field.field.node.page.field_menu_parent.yml
@@ -16,7 +16,7 @@ field_name: field_menu_parent
 entity_type: node
 bundle: page
 label: 'Menu parent'
-description: ''
+description: 'Select a page from the same group as your content. Typing the parent page as a handbook or guide is recommended.'
 required: false
 translatable: false
 default_value: {  }
@@ -27,8 +27,7 @@ settings:
     target_bundles:
       page: page
     sort:
-      field: title
-      direction: ASC
+      field: _none
     auto_create: false
     auto_create_bundle: ''
 field_type: entity_reference
