--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -106,8 +106,12 @@ content:
             values: {  }
             value_form:
               value: false
-            effect: show
-            effect_options: {  }
+            effect: slide
+            effect_options:
+              fade:
+                speed: '400'
+              slide:
+                speed: '400'
             selector: ''
             form_mode: default
           entity_type: node
@@ -122,7 +126,29 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      conditional_fields:
+        f8932a24-33a5-4730-949c-28586c396c54:
+          dependee: field_include_in_menu
+          settings:
+            state: visible
+            condition: checked
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              value: false
+            effect: slide
+            effect_options:
+              fade:
+                speed: '400'
+              slide:
+                speed: '400'
+            selector: ''
+            form_mode: default
+          entity_type: node
+          bundle: page
   field_page_type:
     weight: 2
     settings: {  }
