POWR-1413 Delete location when roll back parks

--- a/web/modules/custom/portland_migrations/migrations/parks.yml
+++ b/web/modules/custom/portland_migrations/migrations/parks.yml
@@ -57,5 +57,5 @@ process:
       - 'constants/portlandmaps_id_prefix'
       - PropertyID
 destination:
-  plugin: 'entity:node'
+  plugin: park_destination_plugin
   default_bundle: park_facility
