POWR-1483 put permissions on the field since group permissions don't really work.

--- a/web/sites/default/config/field.storage.node.field_menu_parent.yml
+++ b/web/sites/default/config/field.storage.node.field_menu_parent.yml
@@ -7,7 +7,7 @@ dependencies:
     - node
 third_party_settings:
   field_permissions:
-    permission_type: public
+    permission_type: custom
 id: node.field_menu_parent
 field_name: field_menu_parent
 entity_type: node
