--- a/web/sites/default/config/field.storage.node.field_include_in_menu.yml
+++ b/web/sites/default/config/field.storage.node.field_include_in_menu.yml
@@ -7,7 +7,7 @@ dependencies:
     - node
 third_party_settings:
   field_permissions:
-    permission_type: public
+    permission_type: custom
 id: node.field_include_in_menu
 field_name: field_include_in_menu
 entity_type: node
