POWR-1483 resolve config conflict

--- a/web/sites/default/config/core.entity_view_display.node.page.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.featured.yml
@@ -103,7 +103,10 @@ hidden:
   field_audience: true
   field_body_content: true
   field_group: true
+  field_include_in_menu: true
   field_legacy_path: true
+  field_menu_link_text: true
+  field_menu_parent: true
   field_popular: true
   field_related_content: true
   field_reviewer: true
