POWR-1400 added code to retrieve and save redirects into computed field, deleted field_legacy_path from all entity types except location (throws an error when deleting)

--- a/web/sites/default/config/core.entity_form_display.node.location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.location.default.yml
@@ -83,6 +83,7 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_legacy_path: true
   group_content: true
   promote: true
   status: true
