--- a/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
@@ -45,7 +45,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 21
+    weight: 22
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -106,7 +106,7 @@ content:
     region: content
     third_party_settings: {  }
   field_facebook:
-    weight: 28
+    weight: 29
     settings:
       size: 60
       placeholder: ''
@@ -161,7 +161,7 @@ content:
     region: content
     third_party_settings: {  }
   field_instagram:
-    weight: 30
+    weight: 31
     settings:
       size: 60
       placeholder: ''
@@ -242,6 +242,19 @@ content:
   field_redirects:
     type: string_textfield
     weight: 19
+  field_reservations_available:
+    weight: 12
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_redirects:
+    type: string_textfield
+    weight: 19
     region: content
     settings:
       size: 60
@@ -257,7 +270,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 27
+    weight: 28
     settings:
       size: 60
       placeholder: ''
@@ -272,7 +285,7 @@ content:
     type: number
     region: content
   field_twitter:
-    weight: 29
+    weight: 30
     settings:
       size: 60
       placeholder: ''
@@ -288,13 +301,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 24
+    weight: 25
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 22
+    weight: 23
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -302,7 +315,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 26
+    weight: 27
     region: content
     third_party_settings: {  }
   title:
@@ -318,7 +331,7 @@ content:
         maxlength_js_label: 'Google will display search results at about @limit characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 20
+    weight: 21
     settings:
       match_operator: CONTAINS
       size: 60
@@ -326,7 +339,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 23
+    weight: 24
     region: content
     settings: {  }
     third_party_settings: {  }
