POWR-1452 Add portland maps embed option

--- a/web/sites/default/config/core.entity_form_display.media.map.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.map.default.yml
@@ -42,7 +42,7 @@ content:
             values: {  }
             value_form:
               -
-                value: 'Google Map embed'
+                value: embedded
             effect: show
             effect_options: {  }
             selector: ''
@@ -60,7 +60,7 @@ content:
             values: {  }
             value_form:
               -
-                value: 'Geo file'
+                value: geo
             effect: show
             effect_options: {  }
             selector: ''
@@ -85,7 +85,7 @@ content:
             values: {  }
             value_form:
               -
-                value: 'Google Map embed'
+                value: embedded
             effect: show
             effect_options: {  }
             selector: ''
@@ -103,7 +103,7 @@ content:
             values: {  }
             value_form:
               -
-                value: 'Geo file'
+                value: geo
             effect: show
             effect_options: {  }
             selector: ''
@@ -137,7 +137,7 @@ content:
     third_party_settings: {  }
   image:
     type: image_focal_point
-    weight: 7
+    weight: 6
     settings:
       preview_image_style: thumbnail
       preview_link: true
