--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -113,6 +113,7 @@ module:
   media_embed_field: 0
   media_embed_google_maps: 0
   media_embed_media: 0
+  media_embed_portland_maps: 0
   media_entity_instagram: 0
   media_entity_twitter: 0
   media_library: 0
