--- a/web/sites/default/config/field.field.media.map.field_map_embed.yml
+++ b/web/sites/default/config/field.field.media.map.field_map_embed.yml
@@ -16,7 +16,7 @@ id: media.map.field_map_embed
 field_name: field_map_embed
 entity_type: media
 bundle: map
-label: 'Map embed code'
+label: 'Map URL or embed code'
 description: "Enter the Google Maps embed code obtained by following these steps:\r\n<ol>\r\n<li>Select <strong>Share or embed map</strong> from the Google Maps menu</li>\r\n<li>Select the <strong>Embed a map</strong> tab and click the <strong>Copy HTML</strong> button</li>\r\n<li>Paste the embed code into the field above</li>\r\n</ol>\r\n"
 required: false
 translatable: false
@@ -25,6 +25,7 @@ default_value_callback: ''
 settings:
   allowed_providers:
     google_maps: google_maps
+    portland_maps: portland_maps
     vimeo: '0'
     youtube: '0'
     youtube_playlist: '0'
