--- a/web/sites/default/config/field.storage.media.field_map_type.yml
+++ b/web/sites/default/config/field.storage.media.field_map_type.yml
@@ -16,10 +16,10 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: 'Google Map embed'
-      label: 'Google Map embed'
+      value: embedded
+      label: 'Embedded map (Google Maps, Portland Maps, ArcGIS Online, etc.)'
     -
-      value: 'Geo file'
+      value: geo
       label: 'Geo file'
   allowed_values_function: ''
 module: options
