POWR-1400 used correct field type plugin, deleted field_legacy_path from location, computed field now correctly retrieves id on new entities

--- a/web/sites/default/config/core.entity_form_display.node.location.short_location_form.yml
+++ b/web/sites/default/config/core.entity_form_display.node.location.short_location_form.yml
@@ -6,7 +6,6 @@ dependencies:
     - core.entity_form_mode.node.short_location_form
     - field.field.node.location.field_address_or_entrance
     - field.field.node.location.field_geolocation
-    - field.field.node.location.field_legacy_path
     - field.field.node.location.field_summary
     - node.type.location
     - workflows.workflow.editorial_default_published
@@ -16,6 +15,7 @@ dependencies:
     - geofield
     - maxlength
     - path
+    - text
 id: node.location.short_location_form
 targetEntityType: node
 bundle: location
@@ -33,6 +33,14 @@ content:
     region: content
     settings:
       html5_geolocation: false
+    third_party_settings: {  }
+  field_redirects:
+    type: text_textfield
+    weight: 50
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   field_summary:
     weight: 3
@@ -77,7 +85,6 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
-  field_legacy_path: true
   field_portlandmaps_id: true
   field_portlandmaps_layer: true
   group_content: true
