--- a/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
@@ -78,6 +78,7 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  group_content: true
   path: true
   promote: true
   scheduled_publication: true
