--- a/web/sites/default/config/core.entity_view_display.node.park_facility.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.featured.yml
@@ -66,6 +66,11 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  locations_eva_park_map:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
 hidden:
   content_moderation_control: true
   field_alert_text: true
