--- a/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
@@ -93,6 +93,11 @@ content:
             fi-def-at: false
     type: string
     region: content
+  locations_eva_service_locaton_map:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   service_location_directions_link_entity_view_1:
     weight: 4
     region: content
