--- a/web/sites/default/config/core.entity_view_display.group.project.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.featured.yml
@@ -108,7 +108,11 @@ content:
 hidden:
   changed: true
   created: true
+  field_address: true
   field_audience: true
+  field_display_date: true
+  field_display_date_toggle: true
+  field_email: true
   field_enable_documents_menu_item: true
   field_enable_events_menu_item: true
   field_enable_guides_and_informat: true
@@ -118,7 +122,10 @@ hidden:
   field_featured_content: true
   field_featured_groups: true
   field_legacy_path: true
+  field_location: true
+  field_map: true
   field_parent_group: true
+  field_phone: true
   field_project_status: true
   field_project_type: true
   field_search_keywords: true
