--- a/web/sites/default/config/core.entity_view_display.node.page.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.related.yml
@@ -85,6 +85,7 @@ hidden:
   field_body_content: true
   field_group: true
   field_legacy_path: true
+  field_location: true
   field_page_type: true
   field_popular: true
   field_related_content: true
