--- a/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
@@ -191,6 +191,11 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  locations_eva_park_map:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
 hidden:
   content_moderation_control: true
   field_legacy_path: true
