--- a/web/sites/default/config/core.entity_view_display.node.service_location.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.related.yml
@@ -83,6 +83,11 @@ content:
     third_party_settings: {  }
     type: string
     region: second
+  locations_eva_service_locaton_map:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   service_location_directions_link_entity_view_1:
     weight: 4
     region: second
