--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -19,18 +19,16 @@ dependencies:
     - field.field.group.elected_official.field_location
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
+    - field.field.group.elected_official.field_person_image
     - field.field.group.elected_official.field_phone
-    - field.field.group.elected_official.field_portrait
     - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - field.field.group.elected_official.field_twitter
     - group.type.elected_official
-    - image.style.portrait_3_4_285w
   module:
     - address
     - ds
-    - image
     - telephone
 third_party_settings:
   ds:
@@ -65,7 +63,7 @@ third_party_settings:
         - field_location
         - group_site_menu_entity_view_1
       top_right:
-        - field_portrait
+        - field_person_image
       center_left:
         - field_email
         - field_phone
@@ -164,6 +162,22 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: top_left
+  field_person_image:
+    type: entity_reference_entity_view
+    weight: 2
+    label: hidden
+    settings:
+      view_mode: responsive_4x5
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    region: top_right
   field_phone:
     type: telephone_link
     weight: 5
