POWR-1400 removed old legacy path field from park facility content type

--- a/web/sites/default/config/views.view.content.yml
+++ b/web/sites/default/config/views.view.content.yml
@@ -1,10 +1,9 @@
 uuid: e755469f-111c-4ad4-819a-13c038622717
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - field.storage.node.field_group
-    - field.storage.node.field_legacy_path
     - field.storage.node.field_page_type
     - workflows.workflow.editorial
   module:
@@ -871,69 +870,6 @@ display:
           plugin_id: field
           entity_type: node
           entity_field: changed
-        field_legacy_path:
-          id: field_legacy_path
-          table: node__field_legacy_path
-          field: field_legacy_path
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: 'Legacy path'
-          exclude: false
-          alter:
-            alter_text: true
-            text: '<a href="https://www.portlandoregon.gov{{ field_legacy_path__value }}">{{ field_legacy_path__value }}</a>'
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
         operations:
           id: operations
           table: node
@@ -1396,7 +1332,6 @@ display:
       max-age: 0
       tags:
         - 'config:field.storage.node.field_group'
-        - 'config:field.storage.node.field_legacy_path'
         - 'config:field.storage.node.field_page_type'
         - 'config:workflow_list'
         - extensions
@@ -1432,7 +1367,6 @@ display:
       max-age: 0
       tags:
         - 'config:field.storage.node.field_group'
-        - 'config:field.storage.node.field_legacy_path'
         - 'config:field.storage.node.field_page_type'
         - 'config:workflow_list'
         - extensions
