--- a/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
@@ -13,7 +13,6 @@ dependencies:
     - field.field.node.park_facility.field_hours_of_operation
     - field.field.node.park_facility.field_images
     - field.field.node.park_facility.field_instagram
-    - field.field.node.park_facility.field_legacy_path
     - field.field.node.park_facility.field_located_within
     - field.field.node.park_facility.field_location_status
     - field.field.node.park_facility.field_neighborhood
@@ -46,16 +45,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-<<<<<<< HEAD
-    weight: 22
-=======
     weight: 21
->>>>>>> POWR-1400 added code to retrieve and save redirects into computed field, deleted field_legacy_path from all entity types except location (throws an error when deleting)
     region: content
     settings: {  }
     third_party_settings: {  }
   field_alert_text:
-    weight: 17
+    weight: 16
     settings:
       rows: 3
       placeholder: ''
@@ -97,7 +92,7 @@ content:
     region: content
   field_documents:
     type: entity_browser_entity_reference
-    weight: 14
+    weight: 13
     settings:
       entity_browser: document_browser_embed
       field_widget_display: rendered_entity
@@ -111,11 +106,7 @@ content:
     region: content
     third_party_settings: {  }
   field_facebook:
-<<<<<<< HEAD
-    weight: 29
-=======
     weight: 28
->>>>>>> POWR-1400 added code to retrieve and save redirects into computed field, deleted field_legacy_path from all entity types except location (throws an error when deleting)
     settings:
       size: 60
       placeholder: ''
@@ -123,7 +114,7 @@ content:
     type: string_textfield
     region: content
   field_history:
-    weight: 15
+    weight: 14
     settings:
       rows: 5
       placeholder: ''
@@ -156,7 +147,7 @@ content:
     region: content
   field_images:
     type: entity_browser_entity_reference
-    weight: 13
+    weight: 12
     settings:
       entity_browser: image_browser_embed
       field_widget_display: rendered_entity
@@ -170,19 +161,7 @@ content:
     region: content
     third_party_settings: {  }
   field_instagram:
-<<<<<<< HEAD
-    weight: 31
-=======
     weight: 30
->>>>>>> POWR-1400 added code to retrieve and save redirects into computed field, deleted field_legacy_path from all entity types except location (throws an error when deleting)
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_legacy_path:
-    weight: 20
     settings:
       size: 60
       placeholder: ''
@@ -196,7 +175,7 @@ content:
     type: chosen_select
     region: content
   field_location_status:
-    weight: 16
+    weight: 15
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -235,7 +214,7 @@ content:
     type: options_select
     region: content
   field_portlandmaps_id:
-    weight: 19
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -246,7 +225,7 @@ content:
     type: string_textfield
     region: content
   field_portlandmaps_layer:
-    weight: 18
+    weight: 17
     settings:
       size: 60
       placeholder: ''
@@ -352,6 +331,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_reservations_available: true
   group_content: true
   panelizer: true
   promote: true
