--- a/web/sites/default/config/core.entity_view_display.node.park_facility.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.teaser.yml
@@ -7,12 +7,12 @@ dependencies:
     - field.field.node.park_facility.field_alert_text
     - field.field.node.park_facility.field_body_content
     - field.field.node.park_facility.field_city_section
+    - field.field.node.park_facility.field_documents
     - field.field.node.park_facility.field_facebook
     - field.field.node.park_facility.field_history
     - field.field.node.park_facility.field_hours_of_operation
     - field.field.node.park_facility.field_images
     - field.field.node.park_facility.field_instagram
-    - field.field.node.park_facility.field_legacy_path
     - field.field.node.park_facility.field_located_within
     - field.field.node.park_facility.field_location_status
     - field.field.node.park_facility.field_neighborhood
@@ -22,6 +22,7 @@ dependencies:
     - field.field.node.park_facility.field_portlandmaps_id
     - field.field.node.park_facility.field_portlandmaps_layer
     - field.field.node.park_facility.field_property_id
+    - field.field.node.park_facility.field_reservations_available
     - field.field.node.park_facility.field_reviewer
     - field.field.node.park_facility.field_search_keywords
     - field.field.node.park_facility.field_size_in_acres
@@ -56,17 +57,22 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  locations_eva_park_map:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
 hidden:
   content_moderation_control: true
   field_alert_text: true
   field_body_content: true
   field_city_section: true
+  field_documents: true
   field_facebook: true
   field_history: true
   field_hours_of_operation: true
   field_images: true
   field_instagram: true
-  field_legacy_path: true
   field_located_within: true
   field_location_status: true
   field_neighborhood: true
@@ -74,6 +80,7 @@ hidden:
   field_portlandmaps_id: true
   field_portlandmaps_layer: true
   field_property_id: true
+  field_reservations_available: true
   field_reviewer: true
   field_search_keywords: true
   field_size_in_acres: true
