POWR-1414 Update Park search result display

--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -421,6 +421,7 @@ datasource_settings:
       selected:
         - alert
         - building
+        - location
         - notification
         - service_location
         - top_search
