--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -87,8 +87,6 @@ content:
             fi-def-at: false
     type: entity_reference_entity_view
     region: content
-  field_location:
-    weight: 4
   field_include_in_menu:
     weight: 6
     label: above
@@ -98,6 +96,9 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_location:
+    weight: 4
     region: content
   field_menu_link_text:
     weight: 5
