POWR-1452 Add ArcGIS maps embed option

--- a/web/sites/default/config/core.entity_view_display.media.map.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.map.media_library.yml
@@ -10,21 +10,16 @@ dependencies:
     - field.field.media.map.field_media_in_library
     - field.field.media.map.field_summary
     - field.field.media.map.image
-    - image.style.thumbnail
     - media.type.map
+    - responsive_image.styles.paragraph_image
   module:
     - ds
-    - image
+    - responsive_image
 id: media.map.media_library
 targetEntityType: media
 bundle: map
 mode: media_library
 content:
-  content_moderation_control:
-    weight: -20
-    settings: {  }
-    third_party_settings: {  }
-    region: content
   name:
     type: string
     weight: 0
@@ -32,12 +27,19 @@ content:
     label: hidden
     settings:
       link_to_entity: false
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   thumbnail:
-    type: image
+    type: responsive_image
     label: hidden
     settings:
-      image_style: thumbnail
+      responsive_image_style: paragraph_image
       image_link: ''
     weight: 1
     third_party_settings:
@@ -50,6 +52,7 @@ content:
             classes: {  }
     region: content
 hidden:
+  content_moderation_control: true
   created: true
   field_geo_file: true
   field_map_embed: true
