--- a/web/sites/default/config/field.field.media.map.field_map_embed.yml
+++ b/web/sites/default/config/field.field.media.map.field_map_embed.yml
@@ -24,6 +24,7 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_providers:
+    arcgis_online: arcgis_online
     google_maps: google_maps
     portland_maps: portland_maps
     vimeo: '0'
