--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -110,6 +110,7 @@ module:
   masquerade: 0
   maxlength: 0
   media: 0
+  media_embed_arcgis_online: 0
   media_embed_field: 0
   media_embed_google_maps: 0
   media_embed_media: 0
